<resources>
    <string name="app_name">fajar-time</string>
    <string name="skill_boost">SkillBoost</string>
    <string name="welcome_back">Welcome back</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_subtitle">Accelerate your career in minutes a day</string>
    <string name="username_label">USERNAME</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_label">PASSWORD</string>
    <string name="password_hint">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google">Google</string>
    <string name="linkedin">LinkedIn</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>